026-using-kubernetes/ep026.10.03-k8s-networking-part-3-ingress/k8s/asrv1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asrv1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asrv1
  template:
    metadata:
      labels:
        app: asrv1
    spec:
      containers:
      - name: asrv1
        image: striversity/using-k8s:asrv
        ports:
        - containerPort: 8080
