026-using-kubernetes/ep026.10.03-k8s-networking-part-3-ingress/k8s/asrv1-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asrv1
spec:
  selector:
    app: asrv1
  ports:
  - port: 8080
    targetPort: 8080
